[package]
name = "secp"
version = "0.2.3"
edition = "2021"
authors = ["conduition <conduition@proton.me>"]
description = "A flexible and secure secp256k1 elliptic curve math library with constant-time support and superb ergonomics."
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/conduition/secp"
keywords = ["secp256k1", "k256", "elliptic", "curve", "schnorr"]

[dependencies]
base16ct = { version = "0.2.0", default-features = false }
crypto-bigint = { version = "0.5.3", default-features = false, optional = true }
k256 = {branch = "sgx-sha-workaround", git = "https://github.com/kziemianek/elliptic-curves.git", optional = true, default-features = false, features = ["alloc", "arithmetic"] }
num-traits = { version = "0.2.18", default-features = false, optional = true }
once_cell = { package = "once_cell", branch = "master", git = "https://github.com/mesalock-linux/once_cell-sgx" }
rand = { version = "0.8.5", optional = true, default-features = false }
secp256k1 = { version = "0.28.0", optional = true, default-features = false, features = ["alloc"] }
serde = { version = "1.0.188", default-features = false, optional = true }
serdect = { version = "0.2.0", default-features = false, optional = true, features = [] }
subtle = { package = "subtle", branch = "2.5.0-update", git = "https://github.com/kziemianek/subtle-sgx.git", features = ["const-generics"] }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }


[dev-dependencies]
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
hex = "0.4.3"
serdect = "0.2.0"
crypto-bigint = "0.5.3"
rand = "0.8.5"
sha2 = "0.10.8"

[features]
default = ["secp256k1"]
secp256k1 = ["dep:secp256k1"]
k256 = ["dep:k256"]
serde = ["dep:serde", "secp256k1?/serde", "dep:serdect"]
rand = ["dep:rand", "secp256k1?/rand-std"]
secp256k1-invert = ["dep:crypto-bigint"]
num-traits = ["dep:num-traits"]

[package.metadata.docs.rs]
all-features = true
